--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html,
 body {
     height: 100%;
     width: 100%;
+    cursor: url('running_dog_cursor-ezgif.com-webp-to-gif-converter.gif'), auto;
 }
 
 nav {
@@ -22,7 +23,7 @@ nav {
     padding: 2vw 10.4vw;
     justify-content: space-between;
     background-color: #111;
-    z-index: 10;
+    z-index: 1;
 }
 
 nav h1 {
@@ -40,7 +41,7 @@ nav button {
     border: none;
 }
 
-nav button svg {
+nav button img {
     height: 0.8vw;
     margin-left: 1.6vw;
 }
@@ -49,10 +50,8 @@ nav button svg {
     width: 79%;
     height: 0vh;
     position: absolute;
-    /* background-color: red; */
     top: 100%;
     background-color: #111;
-    z-index: 9;
     border-bottom: 1px solid #fff;
 }
 #page1 {
@@ -165,4 +164,165 @@ nav button svg {
     top: 0;
     right: 0;
     z-index: 2;
+}
+
+/* page2 */
+
+#page2 {
+    height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    padding: 0vw 10.5vw;
+    padding-bottom: 8vw;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #333;
+    justify-content: space-between;
+}
+
+
+
+/* page2-left */
+
+
+
+#page2-left {
+    
+    height: 100%;
+    width: 40%;
+    margin-top: 4vw;
+    /* background-color: #333; */
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 3vw 0;
+    background-image: linear-gradient(to right,#111,transparent) ,url('Didi.jpg');
+    background-size: cover; 
+    background-position: center;
+    filter: contrast(120%);
+   
+}
+
+#page2-left p {
+    font-size: 2vw;
+    padding-left: 5%;
+    
+}
+
+#page2-left h5 {
+    width: 75%;
+    font-weight: 400;
+    font-size: 1.1vw;
+    padding-left: 3%;
+    
+}
+
+
+/* page2-right */
+
+#page2-right {
+    margin-top: 4vw;
+    height: 100%;
+    width: 50%;
+    /* background-color: #333; */
+}
+
+.right-elem {
+    position: relative;
+    /* background-color: red; */
+    padding-top: 2vw;
+    padding-bottom: 3vw;
+    border-bottom: 1px solid #333;
+}
+
+.right-elem h2 {
+    font-size: 1.4vw;
+    font-weight: 400;
+}
+
+.right-elem img {
+    height: 8vw;
+    width: 8vw;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    opacity: 0;
+    position: absolute;
+    scale: 0;
+}
+
+
+/* page3 */
+
+
+
+#page3 {
+    height: 100vh;
+    width: 100%;
+    background-color: #111;
+    position: relative;
+    background-image:linear-gradient(to right,#111,transparent), url(https://images.unsplash.com/photo-1444212477490-ca407925329e?q=80&w=2560&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    filter: contrast(30px);
+    filter: brightness(-15px);
+}
+
+
+.page3-center {
+   
+    display: flex;
+    align-items: center;
+    padding: 1vw;
+    flex-direction: column;
+}
+
+.page3-center .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3.3vw;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.page3-center .icon i {
+    color: #000;
+    font-size: 2.8vw;
+
+}
+
+.page3-center h5 {
+    font-size: 0.8vw;
+    background-color: #fff;
+    color: #000;
+    border-radius: 50px;
+    padding: 12px 26px 10px 26px;
+    margin-top: 0.5vw;
+    font-weight: 700;
+    opacity: 0;
+    transition: all ease 0.5s;
+    transform: translateY(16%);
+    text-transform: uppercase;
+}
+
+.page3-center:hover h5 {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+#page3 video {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    opacity: 0;
+    border-radius: 30px;
+    z-index: 99999;
+
 }
