--- a/style.css
+++ b/style.css
@@ -580,7 +580,19 @@ nav button img {
     align-items: center;
     flex-direction: column;
   }
- 
+  .title {
+    width: 420px;
+    font-size: 84px;
+    font-family: poppins;
+    font-weight: 700;
+    line-height: 88px;
+  }
+  .sub-title {
+    width: 420px;
+    font-family: poppins;
+    font-size: 14px;
+    margin-top: 30px;
+  }
  
 
   #adoption-application-button{
